functional application - next fix to vertically align text

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
+  line-height: 1rem;
 }
 
 textarea {
@@ -21,6 +22,8 @@ textarea {
 }
 
 .row {
+  text-align: center;
+  height: 70px;
   border-top: 1px solid white;
 }
 
